--- a/index.Rmd
+++ b/index.Rmd
@@ -1,42 +1,125 @@
 ---
 title: "Quang Nguyen"
-output: rmdformats::downcute
+output: flexdashboard::flex_dashboard
 ---
 
-<img src="images/me.jpeg" alt = "Quang Nguyen" width="205" height="270">
+<style>
+.image-container {
+  background-position: center top !important;
+}
+</style>
 
-# About
+```{r setup, include=FALSE}
+library(flexdashboard)
+```
+
+# {.sidebar}
+
+# Home {data-icon="fa-home"}
+
+Column {data-width=200}
+-------------------------------------
+    
+### {-}
+
+<center>
+
+![](https://raw.githubusercontent.com/qntkhvn/quang/main/images/me.png){width=80%}
+
+<font size="4">
+
+Quang Nguyen
+
+MS Student in Applied Statistics
+
+Loyola University Chicago
+
+</font>
+ 
+<br>
+
+<font size="6"> 
+
+[<i class="fas fa-envelope"></i>](mailto:nminhquang.99@gmail.com) 
+[<i class="fab fa-twitter-square"></i>](https://twitter.com/M_Quang_Nguyen) 
+[<i class="fab fa-linkedin"></i>](https://www.linkedin.com/in/mqnnguyen/) 
+[<i class="fab fa-github"></i>](https://github.com/qntkhvn) 
+
+<font size="5">CV [<i class="fas fa-file-pdf"></i>](https://qntkhvn.github.io/quang/docs/cv.pdf) </font> 
+
+</font>
+
+</center>
+   
+Column {data-width=400}
+-------------------------------------
+
+ 
+### {-}
+
+<font size="6"> 
+
+Biography
+
+</font>
+
+<font size="4"> 
 
 I am currently a graduate student at Loyola University Chicago, pursuing a Master of Science degree in Applied Statistics. I previously completed my undergraduate study at Wittenberg University in Springfield, Ohio, graduating in May 2020 with a Bachelor of Science degree in Mathematics and Data Science. I am originally from Nha Trang, Khanh Hoa, which is located in the South Central Coast of Vietnam. In my free time, you may find me watching sports, listening to podcasts, and cooking. I am a huge supporter of Manchester United F.C. of the English Premier League as well as NBA's LA Clippers.
 
-# CV
+</font>
+    
+# Projects {data-icon="fa-chart-line"}
 
-My CV can be found [here](docs/cv.pdf).
+<font size="6"> 
 
-# Projects
+Projects
 
-My past and current projects are publicly available on my [`GitHub`](https://github.com/qntkhvn) account. In addition, below is a list of my posters and talks presented at statistics/data science/analytics conferences.
+</font>
+
+<font size="4"> 
+
+My past and current projects are publicly available on my [`GitHub`](https://github.com/qntkhvn) account. 
+
+In addition, below is a list of my posters and talks presented at statistics/data science/analytics conferences.
 
   - *UCSAS*                  [`poster`](https://www.dropbox.com/s/6prz9oj3zur9scj/ucsas2020Poster.pdf?dl=0)
   - *CMSAC*                  [`poster`](https://www.dropbox.com/s/y0daysvsnjukdjq/cmsac2020Poster.pdf?dl=0) [`video`](https://www.dropbox.com/s/vcudx5qqfk6u3cy/cmsac2020Video.mp4?dl=0)
   - *NESS NextGen DSD*       [`poster`](https://www.dropbox.com/s/p0eg92zvdqy56ru/dsd2020Poster.pdf?dl=0)
   - *MSAM*                   [`video`](https://www.dropbox.com/s/6xe2pntw25kzwpq/posterVideo.mp4?dl=0)
 
-# Links
+</font>
 
-- [Mathematics](https://www.wittenberg.edu/academics/math) and [Data Science](https://www.wittenberg.edu/academics/data-science) at Wittenberg
-- [MS in Applied Statistics](https://www.luc.edu/math/msappliedstat/) at LUC
+# Resources {data-icon="fab fa-r-project"} 
+
+<font size="6"> 
+
+R Resources
+
+</font>
+
+<font size="4"> 
+
 - Installing [R](https://cloud.r-project.org/) and [RStudio](https://rstudio.com/products/rstudio/download/)
 - [RStudio Cheatsheets](https://rstudio.com/resources/cheatsheets/)
 - [R Markdown](https://bookdown.org/yihui/rmarkdown/)
 - [#RStats](https://twitter.com/hashtag/RStats)
 
-# Contact
+</font>
 
-- Email: <nminhquang.99@gmail.com>
-- Connect with me on [LinkedIn](https://www.linkedin.com/in/mqnnguyen/)
+# Contact {data-icon="fa-address-book"}
 
+<font size="6"> 
 
-___
+Contact
 
-Maintained by [qntkhvn](https://github.com/qntkhvn). Powered by [GitHub Pages](https://pages.github.com/).
+</font>
+
+<font size="4"> 
+
+- <i class="fas fa-envelope"></i> <nminhquang.99@gmail.com>
+
+- <i class="fab fa-twitter-square"></i> [\@M_Quang_Nguyen](https://twitter.com/M_Quang_Nguyen)
+
+</font>
+
