--- a/docs/cv.Rmd
+++ b/docs/cv.Rmd
@@ -50,7 +50,7 @@ fontsize: 10pt
 
 \vspace{2mm}
 
-\textbf{Wittenberg University}
+\textbf{Wittenberg University} \hspace*{\fill} Springfield, OH
 
 \textbf{Bachelor of Science, Mathematics and Data Science} \hspace*{\fill} August 2017 - May 2020
 \begin{itemize}
