--- a/docs/cv.Rmd
+++ b/docs/cv.Rmd
@@ -1,9 +1,9 @@
 ---
 output: pdf_document
 header-includes:
-    - \usepackage{setspace}\setstretch{0.55}
+    - \usepackage{setspace}\setstretch{0.5}
     - \usepackage{multicol}
-geometry: margin=0.75in
+geometry: margin=0.7in
 fontsize: 10pt
 ---
 
@@ -71,13 +71,13 @@ fontsize: 10pt
 \large \textbf{RESEARCH INTERESTS}
 \hrulefill
 \normalsize
-\vspace{\baselineskip}
 
 \begin{itemize} 
+\onehalfspacing
 \item[] Supervised learning; statistical applications in sports; data visualization; reproducibility in data science; statistics and data science education; statistical consulting.
 \end{itemize}
 
-
+\setstretch{0.55}
 
 \vspace{\baselineskip}
 \vspace{\baselineskip}
@@ -94,7 +94,8 @@ fontsize: 10pt
 Advisor: Dr. Gregory J. Matthews
 
 \begin{itemize} 
-\item Estimated the aging curves in baseball using multiple imputation with a hierarchical structure.
+\item Project: Estimating the aging curves in baseball using multiple imputation with a hierarchical structure.
+\item Project: Examining the concerns regarding the combined competition format and rank-product scoring in sport climbing.
 \end{itemize}
 
 <!-- \textit{Estimating Aging Curves in Baseball using Multiple Imputation}. Advised by Dr. Gregory J. Matthews. -->
@@ -360,8 +361,6 @@ Midwest Region Chapter \hspace*{\fill} 2018
 \item Introductory Statistics/Data Analysis
 \end{itemize}
 \end{multicols}
-
-\newpage
 
 \textbf{Mathematics} \hspace*{\fill} Major GPA: 4.00/4.00
 
