--- a/docs/cv.Rmd
+++ b/docs/cv.Rmd
@@ -1,7 +1,7 @@
 ---
 output: pdf_document
 header-includes:
-    - \usepackage{setspace}\setstretch{0.6}
+    - \usepackage{setspace}\setstretch{0.5}
     - \usepackage{multicol}
 geometry: margin=0.8in
 fontsize: 10pt
@@ -344,8 +344,6 @@ Title: Predictive Models of English Premier League Goal Scoring
 \end{itemize}
 \end{multicols}
 
-\newpage
-
 \textbf{Mathematics} \hspace*{\fill} Major GPA: 4.00/4.00
 
 \vspace{1mm}
@@ -365,6 +363,14 @@ Title: Predictive Models of English Premier League Goal Scoring
 \end{itemize}
 \end{multicols}
 
+\vspace{\baselineskip}
+\vspace{\baselineskip}
+\large \textbf{MEDIA}
+\hrulefill
+\normalsize
+\vspace{\baselineskip}
+
+*   "Can you pick the AFL's Brownlow Medal winner without knowing the first thing about Australian rules?" \url{https://www.abc.net.au/news/2021-09-19/afl-trying-to-predict-the-2021-brownlow-medal-winner/100472246}
 
 \vspace{\baselineskip}
 \vspace{\baselineskip}
